--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Asignment 1</h1>
-  <p>Basic/simple HTML document</p>
+  <p>Basic/simple HTML document - upload to GitHub and make GitHub Page</p>
   <p>Languages to learn:</p>
   <ul>
     <li>HTML</li>
@@ -15,5 +15,6 @@
     <li>JS</li>
   </ul>
   
+
 </body>
 </html>
